fix(java17): replace List<Bucket>.getFirst() with get(0) in Issue5269FileAccessRefreshIT
Follow-up JDK17 adaptation for commit 9330924e2 (#5269) cherry-picked earlier
in this window: List.getFirst() is JDK21 API and unavailable on Java 17.